--- a/app/seq-gen-ea/pom.xml
+++ b/app/seq-gen-ea/pom.xml
@@ -21,6 +21,18 @@
 						<target>1.6</target>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<archive>
+							<manifestEntries>
+								<mainClass>org.saburto.seq.gen.GeneratorCommandLine</mainClass>
+							</manifestEntries>
+						</archive>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
